--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "bundle": "react-native bundle --entry-file index.js --platform android --bundle-output bundle.js",
+    "test": "jest",
+    "postinstall": "node scripts/create-local-dotenv.js"
   },
   "dependencies": {
     "@dicetechnology/react-native-vesper-sdk": "0.3.3",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-config": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
