--- a/package.json
+++ b/package.json
@@ -8,14 +8,12 @@
     "lint": "eslint .",
     "start": "react-native start",
     "bundle": "react-native bundle --entry-file index.js --platform android --bundle-output bundle.js",
-    "test": "jest",
-    "postinstall": "node scripts/create-local-dotenv.js"
+    "test": "jest"
   },
   "dependencies": {
     "@dicetechnology/react-native-vesper-sdk": "0.3.3",
     "react": "18.3.1",
-    "react-native": "0.75.4",
-    "react-native-config": "^1.5.3"
+    "react-native": "0.75.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
@@ -32,7 +30,6 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
