--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Disable dexing artifact transform to avoid issues with stripping 
+# out default interface methods in dependencies (e.g. vesper-sdk).
+android.useFullClasspathForDexingTransform=true
