--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "cd ios/ && pod install && cd ../ && react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
     "bundle": "react-native bundle --entry-file index.js --platform android --bundle-output bundle.js",
