--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@dicetechnology/react-native-vesper-sdk": "0.3.5",
+    "@dicetechnology/react-native-vesper-sdk": "0.3.7",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-orientation-locker": "1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
