--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ require Pod::Executable.execute_command('node', ['-p',
 
 platform :ios, 14
 prepare_react_native_project!
+ENV['RCT_NEW_ARCH_ENABLED'] = "1"
 
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
